--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,8 +1,19 @@
-include_directories(${CMAKE_CURRENT_SOURCE_DIR})
 
-# The next lines represent a list of all the executables in the folder (chapter)
-# There is typically one executable per exercise.
-# As you solve exercises, you need to add them here.
-# The syntax is add_executable(executable_name source_file_name)
+cmake_minimum_required (VERSION 3.0)
+project (PCSC-project)
 
-add_executable(exercise-template exercise-template.cpp)
+set(CMAKE_CXX_STANDARD 17)
+
+add_library(pcsc
+  src/pcsc.cc
+)
+
+add_subdirectory(googletest)
+
+add_executable(main src/main.cc)
+target_link_libraries(main pcsc)
+
+add_executable(test_pcsc test/test.cc)
+target_link_libraries(test_pcsc gtest_main gtest pthread pcsc)
+
+add_custom_target(test ./test_pcsc DEPENDS test_pcsc)
