--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,10 +5,11 @@ project (PCSC-project)
 set(CMAKE_CXX_STANDARD 17)
 
 add_library(pcsc
-  src/pcsc.cc
+    src/pcsc.cc
+        src/sampling/uniform_sampler.cc
 )
 
-add_subdirectory(googletest)
+#add_subdirectory(googletest)
 
 add_executable(main src/main.cc)
 target_link_libraries(main pcsc)
