removing pcsc template files

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,17 +11,14 @@ file(GLOB SAMPLING_SRC "src/sampling/*.cc")
 # Add all source files in the statistics directory
 file(GLOB STATISTICS_SRC "src/statistics/*.cc")
 
-# Create a library from all source files in the src directory, including sampling and statistics
-add_library(pcsc src/pcsc.cc ${SAMPLING_SRC} ${STATISTICS_SRC})
-
 # Add all executables in the src directory (like main.cc) to the project
 file(GLOB EXECUTABLES "src/*.cc")
-add_executable(main ${EXECUTABLES})
-target_link_libraries(main pcsc)
+add_executable(main ${EXECUTABLES} ${SAMPLING_SRC} ${STATISTICS_SRC})
 
-# Add test executable
-add_executable(test_pcsc test/test.cc)
-target_link_libraries(test_pcsc gtest_main gtest pthread pcsc)
+# Add test executable (renamed to avoid conflicts)
+file(GLOB TEST_EXECUTABLES "test/*.cc")
+add_executable(test_runner ${TEST_EXECUTABLES})
+target_link_libraries(test_runner gtest_main gtest pthread)
 
 # Define a custom target for running tests
-add_custom_target(test ./test_pcsc DEPENDS test_pcsc)
+add_custom_target(run_tests COMMAND ./test_runner DEPENDS test_runner)
