adding clt tester and updating cmake lists

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,20 +4,25 @@ project(PCSC-project)
 set(CMAKE_CXX_STANDARD 17)
 
 # Include directories for header files
-include_directories(src/statistics src/sampling)
+include_directories(src/statistics src/sampling src/functions src/clt_tester)
 
 # Add all source files in the sampling directory
 file(GLOB SAMPLING_SRC "src/sampling/*.cc")
 # Add all source files in the statistics directory
 file(GLOB STATISTICS_SRC "src/statistics/*.cc")
 
+file(GLOB FUNCTIONS_SRC "src/functions/*.cc")
+
+
 # Add all executables in the src directory (like main.cc) to the project
 file(GLOB EXECUTABLES "src/*.cc")
 add_executable(main ${EXECUTABLES} ${SAMPLING_SRC} ${STATISTICS_SRC}
         src/functions/abstract_function.cpp
-        src/functions/abstract_function.h)
+        src/functions/abstract_function.h
+        src/clt_tester/clt_tester.cpp
+        src/clt_tester/clt_tester.h)
 
-# Add test executable (renamed to avoid conflicts)
+# Add test executable
 file(GLOB TEST_EXECUTABLES "test/*.cc")
 add_executable(test_runner ${TEST_EXECUTABLES})
 target_link_libraries(test_runner gtest_main gtest pthread)
