--- a/.gitmodules
+++ b/.gitmodules
@@ -2,3 +2,7 @@
 	path = googletest
 	url = https://github.com/google/googletest.git
 	branch = main
+[submodule "gnuplot"]
+	path = gnuplot-iostream
+	url = https://github.com/dstahlke/gnuplot-iostream.git
+	branch = main
