--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,7 +9,7 @@ set(CMAKE_CXX_STANDARD 17)
 include_directories(gnuplot-iostream)
 
 # Include directories for header files
-include_directories(src/statistics src/sampling src/functions src/clt_tester src/parser)
+include_directories(src/statistics src/sampling src/functions src/parser)
 
 # Add all source files in the sampling directory
 file(GLOB SAMPLING_SRC "src/sampling/*.cc")
@@ -17,8 +17,6 @@ file(GLOB SAMPLING_SRC "src/sampling/*.cc")
 file(GLOB STATISTICS_SRC "src/statistics/*.cc")
 # Add all source files in the functions directory
 file(GLOB FUNCTIONS_SRC "src/functions/*.cc")
-# Add all source files in the clt_tester directory
-file(GLOB CLT_SRC "src/clt_tester/*.cc")
 # Add all source files in the parser directory
 file(GLOB PARSER_SRC "src/parser/*.cc")
 
@@ -31,7 +29,7 @@ add_definitions(-DOUTPUT_PATH="${OUTPUT_PATH}")
 
 # Add all executables in the src directory (like main.cc) to the project
 file(GLOB EXECUTABLES "src/*.cc")
-add_executable(main ${EXECUTABLES} ${SAMPLING_SRC} ${STATISTICS_SRC} ${FUNCTIONS_SRC} ${CLT_SRC} ${PARSER_SRC})
+add_executable(main ${EXECUTABLES} ${SAMPLING_SRC} ${STATISTICS_SRC} ${FUNCTIONS_SRC} ${PARSER_SRC})
 
 #Adding Googletest
 add_subdirectory(googletest)
